<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/movil_qndroid__1"
    android:layout_height="match_parent"
    tools:context=".Formulario">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">


       <androidx.cardview.widget.CardView
           android:layout_width="100dp"
           android:layout_height="100dp"
           app:cardElevation="40dp"
           android:layout_marginRight="60dp"
           app:cardCornerRadius="50dp"
           android:layout_marginTop="20dp"
           app:cardBackgroundColor="#FFF"
           android:layout_gravity="center"
           >
           <ImageView
               android:id="@+id/button2"
               android:background="@drawable/icons8_google_100"
               android:layout_width="100dp"
               android:layout_gravity="center"
               android:layout_height="100dp" />
       </androidx.cardview.widget.CardView>
       <androidx.cardview.widget.CardView
           android:layout_width="100dp"
           android:layout_height="100dp"
           app:cardElevation="55mm"
           android:layout_marginLeft="90dp"
           app:cardCornerRadius="60dp"
           android:layout_marginTop="-100dp"
           app:cardBackgroundColor="#3b5998"
           android:layout_gravity="center"
           >
           <ImageView
               android:id="@+id/butto"
               android:background="@drawable/icons8_facebook_100"
               android:layout_width="100dp"
               android:layout_gravity="center"
               android:layout_height="100dp" />
       </androidx.cardview.widget.CardView>
       <TextView
           android:layout_marginTop="40dp"
           android:layout_marginLeft="50dp"
           android:fontFamily="@font/seguibli"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:textStyle="bold"
           android:textColor="#FFF"
           android:layout_height="wrap_content"
           android:text="@string/nombre" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText
               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>
       <TextView
           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:textStyle="bold"
           android:fontFamily="@font/seguibli"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/apellidos" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView

           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:textStyle="bold"
           android:fontFamily="@font/seguibli"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/nombreuser" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView

           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:textStyle="bold"
           android:fontFamily="@font/seguibli"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/telefono" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView

           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:textStyle="bold"
           android:fontFamily="@font/seguibli"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/correoElectronico" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView

           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:fontFamily="@font/seguibli"
           android:textSize="25dp"
           android:textStyle="bold"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/direccion" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView

           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:fontFamily="@font/seguibli"
           android:textSize="25dp"
           android:textStyle="bold"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/contraseñaa" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>

       <TextView
           android:id="@+id/textView1"
           android:layout_marginTop="0dp"
           android:layout_marginLeft="50dp"
           android:layout_width="match_parent"
           android:textSize="25dp"
           android:fontFamily="@font/seguibli"
           android:textStyle="bold"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           android:text="@string/confirmecontra" />

       <androidx.cardview.widget.CardView
           android:layout_width="340dp"
           android:layout_marginLeft="40dp"
           android:layout_marginTop="0dp"
           android:layout_height="60dp"
           android:ems="10"
           app:cardElevation="80dp"
           android:background="#FFFF"
           app:cardBackgroundColor="#FFF"
           app:cardCornerRadius="39dp">


           <EditText

               android:layout_width="284dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:textStyle="bold"
               android:ems="10"
               android:inputType="textPersonName"
               android:textColor="@android:color/black" />
       </androidx.cardview.widget.CardView>


       <androidx.cardview.widget.CardView
           android:layout_width="300dp"
           android:layout_gravity="center"
           app:cardBackgroundColor="#3b5998"
           android:layout_height="67dp"
           app:cardCornerRadius="30dp"
           android:layout_marginTop="29dp">

           <Button
               android:layout_width="300dp"
               android:fontFamily="@font/seguibli"
               android:layout_height="67dp"
               android:background="@android:color/transparent"
               android:textColor="@android:color/black"
               android:text="Registrarse"
               >
           </Button>
       </androidx.cardview.widget.CardView>


       <TextView
           android:id="@+id/textView3"
           android:layout_marginTop="30dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@android:color/white"
           android:textStyle="bold"
           android:textSize="18dp"
           android:fontFamily="@font/seguibli"
           android:textAlignment="center"
           android:text="@string/notaFinal" />


   </LinearLayout>

</ScrollView>
</LinearLayout>